Barra de Navegação e Logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
             </div>
 
             <div class="container">
-                
+                <img alt="Logo Óticas Solar" title="Óticas Solar" src="img/oculos-escuros.svg" class="logo"/>
+                <nav>
+                    <a title="Página Incial" href="index.html">Página Incial</a>
+                    <a title="Nossos Produtos" href="produtos.html">Produtos e Marcas</a>
+                    <a title="Formas de Contato" href="faleconosco.html">Fale Conosco</a>
+                    <a tittle="Nossas Lojas" href="ondeestamos.html" class="btn_destaque">Onde Estamos</a>
+                </nav>
             </div>
         </header>
     </body>
