Marcas e paineis de propaganda adicionados

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
             <div class="container">
                 <img alt="Logo Óticas Solar" title="Óticas Solar" src="img/oculos-escuros.svg" class="logo"/>
+                
                 <nav>
                     <a title="Página Incial" href="index.html">Página Incial</a>
                     <a title="Nossos Produtos" href="produtos.html">Produtos e Marcas</a>
@@ -25,5 +26,59 @@
                 </nav>
             </div>
         </header>
+
+        <section class="sec01">
+            <div class="container">
+                <div class="interno">
+                    <p class="titulo">
+                        Ajuda profissional para escolher as melhores lentes
+                    </p>
+                </div>
+                <div class="interno">
+                    <p>Armações e Lentes</p>
+                </div>
+                <div class="interno">
+                    <a href="ondeestamos.html" class="btn_destaque">Onde Estamos</a>    
+                </div>
+            </div>
+        </section>
+
+        <section class="sec02">
+            <div class="informacao">
+                <p>Trabalhamos com as melhores marcas de <span style="font-weight:bold">lentes</span></p>
+            </div>
+            <p><img alt="Marcas de Lentes" src="img/logoLentes.png"/></p>           
+        </section>
+
+        <section class="sec03">
+            <div class="informacao">
+                <p>e de armações</p>
+            </div>
+            <p><img alt="Marcas de Armações" src="img/LogoArmacoes.png"/></p>
+        </section>
+
+        <section class="sec04">
+            <div class="informacao">
+                <p>Grande variedade de armações</p>
+            </div>
+            <div class="btn">
+                <a href="ondeestamos.html" class="btn_destaque" >Venha Conferir</a>
+            </div>
+        </section>
+
+        <footer>
+            <div>
+                <div class="rodape">
+                    <ul>
+                        <li>
+                            <img alt="Logo Óticas Solar" tittle="Óticas Solar" src="img/oculos-escuros.svg" class="logo"/>
+                        </li>
+                        <li>
+                            <p>Nós oferecemos um serviço completo para o melhor conforto da sua visão.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
